<?xml version="1.0" encoding="utf-8" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pixelflut_image_bridge</name>
  <description>Bridge to send Image ROS messages to a pixelflut server.</description>
  <version>0.0.0</version>
  <license>MIT</license>

  <maintainer email="pixelflutimagebridge@jaagut.de">Jan Gutsche</maintainer>
  <author email="pixelflutimagebridge@jaagut.de">Jan Gutsche</author>

  <depend>rclpy</depend>
  <depend>generate_parameter_library</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_opencv</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
